maj de chez moi

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <li><a href="#parcours">Parcours</a></li>
                 <li><a href="#stages">Stages</a></li>
                 <li><a href="#competences">Compétences</a></li>
+                <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#veille">Veille</a></li>
                 <li><a href="#epreuves">Épreuves</a></li>
             </ul>
@@ -321,6 +322,92 @@
                     </p>
                     <a href="tableau_de_synthese.xlsx" class="btn-primary" download>
                         <i class="fas fa-file-excel"></i> Télécharger le Tableau
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- CERTIFICATIONS -->
+        <section id="certifications" class="section">
+            <h2 class="section-title">Mes Certifications</h2>
+            <div class="certif-container">
+                <!-- SecNum -->
+                <div class="certif-card glass">
+                    <div class="icon-box"><i class="fas fa-shield-alt"></i></div>
+                    <h3>SecNumAcadémie</h3>
+                    <p>Certification ANSSI - Sécurité du numérique.</p>
+                    <a href="certif/SecNum.pdf" target="_blank" class="btn-secondary">
+                        <i class="fas fa-eye"></i> Voir le document
+                    </a>
+                </div>
+
+                <!-- Pix Compétences -->
+                <div class="certif-card glass">
+                    <div class="icon-box"><i class="fas fa-laptop-code"></i></div>
+                    <h3>Compétences Pix</h3>
+                    <p>Profil de compétences numériques.</p>
+                    <a href="certif/Competences_Pix.pdf" target="_blank" class="btn-secondary">
+                        <i class="fas fa-eye"></i> Voir le document
+                    </a>
+                </div>
+
+                <!-- Parcours Pix -->
+                <div class="certif-card glass">
+                    <div class="icon-box"><i class="fas fa-route"></i></div>
+                    <h3>Parcours Pix</h3>
+                    <p>Détail du parcours de certification.</p>
+                    <a href="certif/parcours_pix.pdf" target="_blank" class="btn-secondary">
+                        <i class="fas fa-eye"></i> Voir le document
+                    </a>
+                </div>
+
+                <!-- Atelier RGPD 1 -->
+                <div class="certif-card glass">
+                    <div class="icon-box"><i class="fas fa-user-shield"></i></div>
+                    <h3>Atelier RGPD - Module 1</h3>
+                    <p>Les fondamentaux du RGPD.</p>
+                    <a href="certif/Atelier_RGPD_Module_1.pdf" target="_blank" class="btn-secondary">
+                        <i class="fas fa-eye"></i> Voir le document
+                    </a>
+                </div>
+
+                <!-- Atelier RGPD 2 -->
+                <div class="certif-card glass">
+                    <div class="icon-box"><i class="fas fa-user-shield"></i></div>
+                    <h3>Atelier RGPD - Module 2</h3>
+                    <p>Responsabilité et conformité.</p>
+                    <a href="certif/Atelier_RGPD_Module_2.pdf" target="_blank" class="btn-secondary">
+                        <i class="fas fa-eye"></i> Voir le document
+                    </a>
+                </div>
+
+                <!-- Atelier RGPD 3 -->
+                <div class="certif-card glass">
+                    <div class="icon-box"><i class="fas fa-user-shield"></i></div>
+                    <h3>Atelier RGPD - Module 3</h3>
+                    <p>Protection des données.</p>
+                    <a href="certif/Atelier_RGPD_Module_3.pdf" target="_blank" class="btn-secondary">
+                        <i class="fas fa-eye"></i> Voir le document
+                    </a>
+                </div>
+
+                <!-- Atelier RGPD 4 -->
+                <div class="certif-card glass">
+                    <div class="icon-box"><i class="fas fa-user-shield"></i></div>
+                    <h3>Atelier RGPD - Module 4</h3>
+                    <p>Sécurité des traitements.</p>
+                    <a href="certif/Atelier_RGPD_Module_4.pdf" target="_blank" class="btn-secondary">
+                        <i class="fas fa-eye"></i> Voir le document
+                    </a>
+                </div>
+
+                <!-- Atelier RGPD 5 -->
+                <div class="certif-card glass">
+                    <div class="icon-box"><i class="fas fa-user-shield"></i></div>
+                    <h3>Atelier RGPD - Module 5</h3>
+                    <p>Droits des personnes.</p>
+                    <a href="certif/Atelier_RGPD_Module_5.pdf" target="_blank" class="btn-secondary">
+                        <i class="fas fa-eye"></i> Voir le document
                     </a>
                 </div>
             </div>
