--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     <h3 style="font-size: 1.5rem; margin-bottom: 15px; color: var(--text-main);"><i class="fas fa-table"
                             style="color: var(--primary); margin-right: 10px;"></i> Tableau de Synthèse</h3>
                     <p style="margin: 20px 0; color: var(--text-muted);">
-                        Retrouvez ici mon tableau de synthèse des compétences (E4/E5) détaillant l'ensemble de mes
+                        Retrouvez ici mon tableau de synthèse des compétences (E5) détaillant l'ensemble de mes
                         réalisations.
                     </p>
                     <a href="tableau_de_synthese.xlsx" class="btn-primary" download>
